--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 						</ul>
 					</nav>
 					
-					<div class="content-header-profile d-flex gap-3 align-items-center">
+					<div class="content-header-profile d-flex gap-xs-2 gap-sm-2 gap-xl-3  align-items-center">
 						<button class="btn open-btn d-md-none"><i class="fal fa-stream fs-4"></i></button>
 						<div class="content-header-message">
 							<img src="./img/envelope.svg"  alt="letter">
