--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!-- Оболочка документа, указываем язык содержимого -->
 <html lang="ru">
 	<head>
+		<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 		<!-- Заголовок страницы в браузере -->
 		<title>	Work5 </title>
 		<!-- Подключаем CSS -->
